style/content.css
.hero-section {
    min-height: calc(100vh - 101px);
    display: flex;
    align-items: flex-end;
}

h2 {
    font-size: 54px;
    line-height: 120%;
    color: var(--text-orange);
}

.projects {
    margin-top: 69px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 64px;
}

.project-section {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.project-card {
    display: flex;
    justify-content: center;
    gap: 48px;
}

.project-card img {
    object-fit: contain;
    height: 100%;
}

.project-card p {
    font-size: 18px;
    line-height: 140%;
    font-weight: 400;
}

.project-title {
    font-size: 48px;
    font-weight: 700;
    line-height: 120%;
    margin-bottom: 17px;
}

.project-languages {
    margin-bottom: 40px;
}

.project-links {
    margin-top: 48px;
}

.project-links a {
    padding: 15px 30px;
}

.github-button {
    color: var(--text-orange);
    border: solid 1px var(--text-green);
    transition: 300ms ease;
}

.github-button:hover {
    color: var(--text-green);
    transition: 300ms ease;
}

.live-test-button {
    color: #0B042D;
    background-color: var(--text-green);
    transition: 300ms ease;
}

.live-test-button:hover {
    color: var(--text-orange);
    transition: 300ms ease;
}

.row-reverse {
    flex-direction: row-reverse;
}

.colleague-feedback {
    font-size: 24px;
    font-weight: 700;
    line-height: 120%;
    color: var(--text-orange);
    margin-top: 36px;
    margin-bottom: 32px;
}

.feedback-card {
    font-size: 18px;
    font-weight: 400;
    line-height: 120%;
    width: 300px;
    min-width: 250px;
}

.feedback-cards {
    display: flex;
    justify-content: center;
    gap: 32px;
    max-width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
}

.feedback-card h4 {
    font-size: 24px;
    font-weight: 700;
    line-height: 120%;
    color: var(--text-orange);
    margin-bottom: 8px;
}

.feedback-text {
    margin-top: 32px;
}

.language-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.all-skills {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    gap: 32px;
    margin-top: 32px;
    margin-bottom: 105px;
}

.skill-section {
    margin-top: 103px;
}

.contact-section {
    margin-top: 104px;
}

.contact-section-title {
    display: flex;
    align-items: center;
    gap: 24px;
    margin-bottom: 24px;
}

.contact-links {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    gap: 14px;
}

.contact-links a {
    display: flex;
    gap: 18px;
    color: var(--text-green);
}

.contact-img {
    height: 24px;
    width: 24px;
    object-fit: contain;
}

.contact-info {
    display: flex;
    justify-content: flex-start;
    gap: 50px;
    margin-bottom: 24px;
}

.contact-info-text {
    max-width: 40%;
}

.text-input-section {
    display: flex;
    justify-content: space-between;
}

.contact-form input {
    border: none;
    background-color: transparent;
    color: var(--text-green);
    font-size: 18px;
    line-height: 140%;
    padding: 15px 13px;
}

.contact-form input::placeholder {
    color: var(--text-green);
}

.form-input-left {
    display: flex;
    flex-direction: column;
    gap: 32px;
    width: 45%;
}

.message-input {
    width: calc(100% - 28px);
    border: none;
    background-color: transparent;
    color: var(--text-green);
    font-size: 18px;
    line-height: 140%;
    padding: 15px 13px;
    resize: none;
}

.message-input::placeholder {
    color: var(--text-green);
}

.submit-section {
    margin-top: 32px;
    display: flex;
    flex-direction: column;
}

.contact-form .guidlines-checkbox {
    width: 18px;
    height: 18px;
    border: solid 2px var(--text-orange);
    appearance: none;
    padding: 0px;
    border-radius: 1px;
    color: transparent;
    cursor: pointer;
}

.legal-requirement:hover .guidlines-checkbox {
    background-color: var(--text-green);
}

.submit-button {
    color: #827B7B;
    line-height: 120%;
    background-color: transparent;
    border: solid 1px #827B7B;
    padding: 15px 30px;
    font-weight: 500;
    justify-self: flex-end;
    cursor: pointer;
    transition: 300ms ease;
}

.submit-button-section {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 88px;
}

.hero-section-image {
    width: 500px;
    height: 500px;
    object-fit: contain;
}

h1 {
    font-size: 81px;
    font-weight: 700;
    line-height: 120%;
}

.h1-section p {
    font-size: 54px;
    line-height: 120%;
    font-weight: 500;
}

.scroll-down {
    position: absolute;
    left: 50%;
    top: 50%;
    background: none;
    border: none;
    cursor: pointer;
    padding: 4px 8px;
}

.scroll-down img {
    height: 50px;
    width: 22px;
}

.hero-content {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    width: 100%;
}

.scroll-down:hover {
    border: solid 1px var(--text-green);
    padding: 3px 7px;
}

.contact-button {
    position: absolute;
    left: 60px;
    top: 40%;
    transform: rotate(270deg);
    background: none;
    border: solid 1px var(--text-green);
    color: var(--text-orange);
    padding: 15px 30px;
    font-size: 18px;
    font-weight: 500;
    line-height: 120%;
    cursor: pointer;
    transition: all 0.4s ease;
}

.contact-button:hover {
    color: var(--text-green);
    transition: all 0.4s ease;
}

.about-section {
    display: flex;
    justify-content: space-between;
    gap: 42px;
    margin-top: 104px;
}

.about-section img {
    width: 500px;
    height: 500px;
    object-fit: contain;
}

.about-content {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    text-align: end;
}

.about-title {
    font-size: 54px;
    line-height: 120%;
    letter-spacing: 0%;
    font-weight: 500;
    margin-bottom: 24px;
}

.contact-links a:hover img {
    filter: brightness(0) saturate(100%) invert(77%) sepia(62%) saturate(2744%) hue-rotate(113deg) brightness(101%) contrast(98%);
}

.about-details {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 8px;
    width: 580px;
}

.about-details h3 {
    font-size: 48px;
    color: var(--text-orange);
    line-height: 120%;
    font-weight: 700;
}

.about-details img {
    height: 100%;
    width: auto;
    object-fit: contain;
}

.about-icon-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-icon-container p {
    margin-left: 16px;
    text-align: left;
}

.about-details-column {
    display: flex;
}

.location-column {
    gap: 64px;
}

.relocate-column {
    justify-content: flex-end;
}

.relocate-column div {
    margin-left: 208px;
    margin-right: 55px;
}

.remote-column {
    justify-content: flex-end;
    gap: 128px;
}

.about-contact {
    margin-top: 32px;
}

.about-contact-button {
    font-size: 18px;
    line-height: 120%;
    color: #0B042D;
    background-color: var(--text-green);
    border: none;
    padding: 15px 30px;
}

.about-contact-button:hover {
    color: var(--text-orange);
}

.scroll-up {
    height: 50px;
    width: 22px;
    padding: 4px 8px;
    cursor: pointer;
}

.scroll-up:hover {
    border: solid 1px var(--text-green);
    padding: 3px 7px;
    filter: brightness(0) saturate(100%) invert(77%) sepia(62%) saturate(2744%) hue-rotate(113deg) brightness(101%) contrast(98%);
}

.contact-links-section {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.align-right {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.relocate-column .about-icon-container:hover img {
    transform: rotate(15deg);
    transition: 300ms ease;
}

.about-icons {
    transition: 300ms ease;
}

.show-remote {
    display: none;
}

.remote-column .about-icon-container:hover .hide-remote {
    display: none;
}

.remote-column .about-icon-container:hover .show-remote {
    display: block;
    height: 120%;
}

.remote-column .about-icon-container {
    align-items: flex-end;
}

.remote-column .about-icon-container p {
    margin-right: 12px;
}

.location-column .about-icon-container:hover .location-icon-section .show-hover {
    display: block;
}

.show-hover {
    display: none;
    object-fit: contain;
    margin-right: 1px;
}

.location-icon-section {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contact-input {
    width: 100%;
}

.form-input-left p {
    color: red;
    display: none;
}

.form-input-left .invalid-input {
    display: block;
}

.message-section {
    width: 45%;
}

.message-section p {
    color: red;
    display: none;
}

.invalid-input p {
    display: block;
}

.about-info-text {
    max-width: 700px;
}

.can-submit {
    color: var(--text-orange);
    border: solid 1px var(--text-green);
    transition: 300ms ease;
}

.can-submit:hover {
    color: var(--text-green);
    border: solid 1px var(--text-green);
    transition: 300ms ease;
}

.checked {
    background-color: var(--text-green);
}

.checked p {
    color: var(--text-orange);
    justify-self: center;
    align-self: center;
    font-size: 13px;
}

.legal-requirement {
    display: flex;
    gap: 8px;
    cursor: pointer;
}

.legal-requirement a {
    color: var(--text-orange);
}

.legal-requirement label {
    cursor: pointer;
}

.input-container {
    border: solid 1px var(--text-green);
    display: flex;
}

.input-feedback {
    height: 24px;
    align-self: center;
    margin: 0px 10px;
    object-fit: contain;
}

.message-section-input {
    height: 100%;
}

.invalid-input-height {
    height: calc(100% - 21px);
}

.message-section .invalid-input {
    display: block;
}

